package NYT.NTableClient.NProto;

option go_package = "a.yandex-team.ru/yt/go/proto/client/table_client";

////////////////////////////////////////////////////////////////////////////////

message TVersionedReadOptions
{
    required int32 read_mode = 1; // EVersionedIOMode
}

message TVersionedWriteOptions
{
    required int32 write_mode = 1; // EVersionedIOMode
}

////////////////////////////////////////////////////////////////////////////////
